update pom and add tests