@@ -1,7 +1,6 @@
 package com.utility.auth.config;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.authentication.ReactiveAuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -23,13 +22,16 @@ public class AuthenticationManager implements ReactiveAuthenticationManager{
 	@Override
 	public Mono<Authentication> authenticate(Authentication authentication) {
 		String authToken = authentication.getCredentials().toString();
-		if(!jwtUtil.validateToken(authToken)) return Mono.empty();
-		Claims claims = jwtUtil.getAllClaimsFromToken(authToken);
-		String username = claims.getSubject();
-		List<String> roles = claims.get("roles", List.class);
-		List<SimpleGrantedAuthority> authorities = roles.stream()
-				.map(SimpleGrantedAuthority::new).collect(Collectors.toList());
-		return Mono.just(new UsernamePasswordAuthenticationToken(username, authToken, authorities));
-		
-	}
+		if (Boolean.FALSE.equals(jwtUtil.validateToken(authToken))) {
+            return Mono.empty();
+        }
+
+        Claims claims = jwtUtil.getAllClaimsFromToken(authToken);
+        String username = claims.getSubject();        
+        List<?> roles = claims.get("roles", List.class);        
+        List<SimpleGrantedAuthority> authorities = roles.stream()
+                .map(role -> new SimpleGrantedAuthority(role.toString()))
+                .toList();
+        return Mono.just(new UsernamePasswordAuthenticationToken(username, authToken, authorities));
+    }
 }
